--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "sass": "^1.79.5",
+    "sass-embedded": "^1.79.5",
     "vite": "^5.4.8"
   }
 }
